Postfix after merge